<resources>
    <string name="app_name">CustomActivation</string>
    <string name="customTenderName">Activation Screen</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="business_name">Business Name</string>
    <string name="business_address_1">Address 1</string>
    <string name="business_address_2">Address 2</string>
    <string name="enter_business_name">Enter business name</string>
    <string name="enter_business_address_line1">Enter business address line1</string>
    <string name="enter_business_address_line2">Enter business address line2</string>
    <string name="enter_business_address_state">Enter business address state</string>
    <string name="postal_code">Postal code</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="state">State</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="enter_business_city">Enter business City</string>
</resources>
