<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/business_name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_business_name"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/phone"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/business_address_1"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_address_line1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_business_address_line1"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/business_address_2"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_address_line2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_business_address_line2"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/city"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_address_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_business_city"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/state"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_address_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_business_address_state"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/fragment_vertical_margin"
            android:weightSum="4">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/postal_code"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/business_address_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_postal_code"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/Done"
            android:textSize="26dp" />

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="26dp" />
    </LinearLayout>
</LinearLayout>
